argo/apps/hello-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
spec:
  selector:
    app: hello-k8s
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
