argo/apps/hello-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello.samakia.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-k8s
            port:
              number: 80
